--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,11 @@
-/* root css */
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: sans-serif;
-}
+
 body{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: #89cccc;
 	background-image: url('../image/png-transparent-snakes-and-ladders-game-android-animated-snake-s-text-video-game-grass-removebg-preview.png');
-	height: 100vh;
 	background-repeat: no-repeat;
 }
 
-.wrapper{
-	display: flex;
-	flex-direction: column;
-	width: 65vmin;
-	height: 70vmin;
-	background: #293447;
-	border-radius: 5px;
-}
 /* game board element */
-.game-details{
+#game-details{
 	color:gray;
 	font-size: 1.2rem;
 	font-weight: 500;
@@ -32,7 +13,7 @@ body{
 	display: flex;
 	justify-content:space-between;
 }
-.game-board{
+#game-board{
 	height: 100%;
 	width: 100%;
 	background: #212837;
